# velk-ui

./: .clang-format  .gitattributes  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md
app/: CMakeLists.txt  main.cpp
plugins/gltf/: CMakeLists.txt
plugins/gltf/src/: gltf_asset.cpp  gltf_asset.h  gltf_decoder.cpp  gltf_decoder.h  gltf_plugin.cpp  gltf_plugin.h
plugins/image/: CMakeLists.txt
plugins/image/src/: env_decoder.cpp  env_material.cpp  env_material.h  environment.h  image.h  image_decoder.cpp  image_encoder.cpp  image_encoder.h  image_material.cpp  image_material.h  image_plugin.cpp  image_visual.cpp  image_visual.h
plugins/render/core/: CMakeLists.txt
plugins/render/gl/: CMakeLists.txt
plugins/text/: CMakeLists.txt
plugins/text/src/: font.cpp  font.h  font_atlas.cpp  font_atlas.h  font_buffers.cpp  font_gpu_buffer.cpp  font_gpu_buffer.h  glyph_baker.cpp  text_plugin.cpp  text_plugin.h
samples/fluent/: CMakeLists.txt  main.cpp
samples/fluent/scenes/: fluent.json
samples/simple/: CMakeLists.txt  main.cpp
samples/simple/assets/: qwantani_dusk_1_puresky_4k.hdr
samples/simple/scenes/: dashboard.json
velk-render/: CMakeLists.txt  README.md
velk-render/docs/: materials.md  render-backend-architecture.md  rendering.md
velk-render/include/velk-render/: blas.h  frustum.h  gbuffer.h  gpu_data.h  plugin.h  render_types.h
velk-render/plugins/rt/: CMakeLists.txt
velk-render/src/: camera_pipeline.cpp  camera_pipeline.h  deferred_gbuffer.h  deferred_path.cpp  deferred_path.h  forward_path.cpp  forward_path.h  material_property.h  mesh.cpp  mesh.h  mesh_buffer.cpp  mesh_buffer.h  mesh_builder.cpp  mesh_builder.h  post_process.cpp  post_process.h  primitive_meshes.cpp  program_data_buffer.cpp  program_data_buffer.h  render_context.cpp  render_context.h  render_graph.cpp  render_graph.h  render_plugin.cpp  render_texture.h  render_texture_group.h  rt_path.cpp  rt_path.h  rt_shadow.cpp  rt_shadow.h  shader.h  shader_cache.cpp  shader_cache.h  shader_compiler.cpp  shader_compiler.h  shader_material.cpp  shader_material.h  spirv_material_reflect.cpp  spirv_material_reflect.h  standard_material.cpp  (+4 more)
velk-render/src/debug/: render_target_dump.cpp
velk-render/src/frame/: default_render_pass.cpp  frame_data_manager.cpp  frame_data_manager.h  frame_snippet_registry.cpp  render_graph.cpp  render_graph.h
velk-render/src/material/: material_property.h  shader_material.cpp  shader_material.h  spirv_material_reflect.cpp  standard_material.cpp  standard_material.h
velk-render/src/mesh/: mesh.cpp  mesh_buffer.cpp  mesh_builder.cpp  primitive_meshes.cpp
velk-render/src/path/: camera_pipeline.cpp  camera_pipeline.h  deferred_path.cpp  deferred_path.h  forward_path.cpp  forward_path.h  post_process.cpp  post_process.h  tonemap.cpp  tonemap.h
velk-render/src/render_path/: view_entry.h
velk-render/src/resource/: gpu_resource_manager.cpp  gpu_resource_manager.h  program_data_buffer.cpp  program_data_buffer.h  render_texture.h  render_texture_group.h  surface.h
velk-render/src/shader/: shader.h  shader_cache.cpp  shader_cache.h  shader_compiler.cpp  shader_compiler.h
velk-render/src/technique/: rt_shadow.cpp
velk-runtime/: CMakeLists.txt  README.md
velk-runtime/include/velk-runtime/: plugin.h
velk-runtime/plugins/glfw/: CMakeLists.txt
velk-runtime/src/: application.cpp  application.h  runtime_plugin.cpp  runtime_plugin.h
velk-scene/: CMakeLists.txt
velk-scene/include/velk-scene/: instance_types.h  plugin.h  types.h
velk-scene/src/: batch_builder.cpp  batch_builder.h  camera.cpp  camera.h  default_batch.cpp  default_batch.h  default_ui_shaders.h  deferred_gbuffer_path.cpp  deferred_gbuffer_path.h  deferred_lighter.cpp  deferred_lighter.h  deferred_path.cpp  deferred_path.h  element.cpp  element.h  env_helper.cpp  env_helper.h  forward_path.cpp  forward_path.h  frame_data_manager.cpp  frame_data_manager.h  frame_snippet_registry.cpp  frame_snippet_registry.h  gpu_resource_manager.cpp  gpu_resource_manager.h  pipeline_options_helpers.h  plugin.cpp  plugin.h  rasterizer.cpp  rasterizer.h  ray_tracer.cpp  ray_tracer.h  render_target_cache.cpp  render_target_cache.h  renderer.cpp  renderer.h  rt_path.cpp  rt_path.h  scene.cpp  scene.h  (+7 more)
velk-scene/src/trait/: light.h
velk-scene/src/transform/: look_at.cpp  look_at.h  matrix.cpp  matrix.h  orbit.cpp  orbit.h  trs.cpp  trs.h
velk-scene/src/visual/: cube_visual.cpp  cube_visual.h  mesh_visual.cpp  mesh_visual.h  primitive_shaders.h  sphere_visual.cpp  sphere_visual.h
velk-ui/: CMakeLists.txt  README.md
velk-ui/docs/: traits.md
velk-ui/docs/plugins/: image.md  text.md
velk-ui/include/velk-ui/: element.h  input_types.h  instance_types.h  plugin.h  types.h
velk-ui/src/: camera.cpp  camera.h  constraint_import_handler.cpp  constraint_import_handler.h  element.cpp  element.h  layout_solver.cpp  layout_solver.h  plugin.cpp  plugin.h  render_cache.h  render_to_texture.cpp  render_to_texture.h  scene.cpp  scene.h
velk-ui/src/constraint/: fixed_size.cpp  fixed_size.h
velk-ui/src/import/: align_type_extension.cpp  align_type_extension.h  dim_type_extension.h  projection_type_extension.cpp  visual_phase_type_extension.cpp  visual_phase_type_extension.h
velk-ui/src/input/: click.cpp  click.h  drag.cpp  drag.h  hover.cpp  hover.h  input_dispatcher.cpp  input_dispatcher.h
velk-ui/src/layout/: stack.cpp  stack.h
velk-ui/src/material/: gradient_material.cpp  gradient_material.h  shader_material.h
velk-ui/src/renderer/: batch_builder.cpp  batch_builder.h  default_ui_shaders.h  deferred_lighter.cpp  deferred_lighter.h  env_helper.cpp  env_helper.h  frame_snippet_registry.cpp  frame_snippet_registry.h  rasterizer.cpp  rasterizer.h  ray_tracer.cpp  ray_tracer.h  renderer.cpp  renderer.h  scene_bvh.cpp  scene_bvh.h  scene_collector.h  view_renderer.h
velk-ui/src/trait/: light.h
velk-ui/src/transform/: look_at.cpp  look_at.h  matrix.cpp  matrix.h  orbit.cpp  orbit.h  trs.cpp  trs.h
velk-ui/src/visual/: cube_visual.cpp  cube_visual.h  mesh_visual.cpp  mesh_visual.h  primitive_shaders.h  (+10 more)
(+263 files in other folders)
